# fork-exif-oxidex

./: .clippy.toml  .gitattributes  .gitignore  BATCH2_CHANGES_SUMMARY.txt  BATCH2_CODE_EXAMPLES.md  BATCH2_REFACTORING_METRICS.md  BATCH_1_FINAL_REPORT.md  BATCH_1_REFACTORING_STATUS.md  BATCH_1_REFACTORING_SUMMARY.md  BATCH_3_MIGRATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLEXITY_REDUCTION_PROGRESS.md  Cargo.toml  Cross.toml  FIXTURE_REMOVAL_ANALYSIS.md  PACKAGING.md  README.md  REFACTORING-COMPLETE.md  REFACTORING_METRICS.txt  REFACTORING_PLAN_operations.md  RELEASE_ANNOUNCEMENT.md  RELEASE_CHECKLIST.md  TAG_DIFF.md  build.rs  cbindgen.toml  changelog.md.bak  comparison.json  config.example.toml  justfile  package-lock.json  package.json  rustfmt.toml  test_formats.sh
.cargo/: config.toml
.claude-flow/metrics/: system-metrics.json
.claude/skills/: codacy-lite.md
.claude/workflows/: exiftool-coverage-loop.js
.github/scripts/: update_readme_benchmarks.py
.github/workflows/: benchmark-comparison.yml  ci.yml  codeql.yml  compare-exiftool.yml  deploy-docs.yml  docs.yml  jpeg-tag-matrix.yml  mac-sign.yml  release.yml  sync-exiftool-tags.yml  test.yml  update-coverage-docs.yml
.swarm/: memory.db-shm  memory.db-wal
api/: exiftool_rs.h  oxidex.h  tag_database_schema.json
benches/: audio_benchmarks.rs  benchmark_results.json  benchmark_results.md  exiftool_comparison.sh  integration_benchmarks.rs  parse_benchmarks.rs  raw_parsing_bench.rs  video_benchmarks.rs
bindings/python/: README.md  example.py  exiftool_rs.py  oxidex.py  test_bindings.py
comparison_results/: FIELD_NAMING_GUIDE.md  raw_outputs.md
docs/: DEBUG_MODE_OOM_FIXES.md  IMPLEMENTATION_ROADMAP.md  TAG_DATABASE.md  changelog.md  ffi_usage.md  flamegraph-guide.md  index.md  package-lock.json  package.json  pre-release.md  profiling.md  refactoring-summary-format-detector.md  tsconfig.json
docs/.internal/: IMPLEMENTATION_ROADMAP.md  flamegraph-guide.md  format-detector-comparison.md  pe-format-support.md  performance-baseline.md  profiling.md
docs/.plans/: 2025-11-18-vitepress-documentation-site-design.md  2025-11-19-parser-complexity-reduction.md  2025-11-19-sprint1-foundation-enhancement.md  2025-11-19-sprint2-pilot-migration.md  2025-11-19-sprint3-broad-migration.md  2025-11-19-sprint4-parser-refactoring.md  2025-11-19-sprint5-optimization-completion.md  2025-11-19-tag-processing-docs-tests-plan.md  2025-12-03-ci-optimization-design.md  2025-12-03-claude-md-redundancy-removal-design.md  2025-12-03-docs-migration-to-main-design.md  2025-12-03-feature-parity-implementation-plan.md
docs/.vitepress/: config.mts
docs/analysis/: exiftool-module-audit.md
docs/api/: ffi_api.md  library_api.md
docs/architecture/: github-pages-setup.md  index.md  multi-crate-tags.md  oxidex-tags-shared.md  parser-migration-guide.md  parser-shared-infrastructure.md  (+1 more)
exiftool-tags/: Cargo.toml  build.rs
exiftool-tags-camera/: Cargo.toml  build.rs
exiftool-tags-camera/src/: camera_tags.yaml  lib.rs
exiftool-tags-core/: Cargo.toml  build.rs
exiftool-tags-core/src/: core_tags.yaml  lib.rs  types.rs
exiftool-tags-document/: Cargo.toml  build.rs
exiftool-tags-document/src/: document_tags.yaml  lib.rs
exiftool-tags-image/: Cargo.toml  build.rs
exiftool-tags-media/: Cargo.toml  build.rs
exiftool-tags-media/src/: lib.rs  media_tags.yaml
exiftool-tags-specialty/: Cargo.toml  build.rs
exiftool-tags-specialty/src/: lib.rs  specialty_tags.yaml
exiftool-tags/src/: lib.rs
exiftool-tags/src/tag_db/: generated_tags.rs  mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_flac.rs  fuzz_mp3.rs  fuzz_mp4.rs  fuzz_pdf.rs
include/: exiftool_rs.h  oxidex.h
oxidex-mcp/: Cargo.toml  README.md
oxidex-mcp/src/: format.rs  lib.rs  main.rs  server.rs  tools.rs  utils.rs
oxidex-mcp/src/tools/: analyze.rs  copy.rs  detect_format.rs  extract.rs  list_tags.rs  mod.rs  search.rs  tag_groups.rs  tag_info.rs  write.rs
oxidex-mcp/tests/: analyze_tests.rs  copy_tests.rs  detect_format_basic.rs  detect_format_debug.rs  detect_format_manual_test.rs  detect_format_tests.rs  extract_tests.rs  integration_tests.rs  search_tests.rs  server_tests.rs  utils_tests.rs  write_tests.rs
oxidex-tags/: Cargo.toml
oxidex-tags-camera/: Cargo.toml  build.rs
oxidex-tags-camera/src/: lib.rs
oxidex-tags-core/: Cargo.toml  build.rs
oxidex-tags-core/src/: core_tags.yaml  lib.rs  types.rs
oxidex-tags-document/: Cargo.toml  build.rs
oxidex-tags-document/src/: document_tags.yaml  lib.rs
oxidex-tags-image/: Cargo.toml  build.rs
oxidex-tags-image/src/: image_tags.yaml  lib.rs
oxidex-tags-media/: Cargo.toml  build.rs
oxidex-tags-media/src/: lib.rs  media_tags.yaml
oxidex-tags-shared/: Cargo.toml
oxidex-tags-specialty/: Cargo.toml  build.rs
oxidex-tags-specialty/src/: lib.rs
oxidex-tags/examples/: render_domain.rs
oxidex-tags/src/: lib.rs
scripts/: analyze_folded_stacks.py  analyze_profile.py  analyze_profile_detailed.py  build-all-packages.sh  create_corpus.rs  find_tag_gaps.py  generate_exiftool_manifest.py  generate_tag_coverage.py  jpeg_tag_matrix.py  jpeg_tag_report.py  model_fix_loop.py  parallel_model_fix_loop.py  parallel_tag_fix_loop.py  parse_flamegraph.py  profile_simple.sh  stop_parallel_fix.py  test-compare-workflow.sh  test-packages.sh  test_find_tag_gaps.py  test_model_fix_loop.py  test_parallel_model_fix_loop.py  test_parallel_tag_fix_loop.py  test_stop_parallel_fix.py  test_watch_parallel_fix.py  watch_parallel_fix.py
src/: lib.rs  main.rs  test_support.rs
tests/: data_lfs_error_summary.md  data_lfs_final_report.md  data_lfs_performance.sh  data_lfs_testing.sh  date_shift_inplace.rs  exif_roundtrip.rs  ffi_c_integration.rs  format_detection_raw.rs  integration.rs  pe_rich_header_test.rs  phase3_integration_test.rs  raw_comprehensive.rs  raw_format_detection.rs  raw_metadata_parsing.rs  tag_database_coverage.rs  tag_normalization_tests.rs  tag_sync_automation.rs  tag_sync_smoke.rs  test_plist_parser.rs  unit_tests.rs  x509_integration.rs
tools/: install.sh  lint.sh  run.sh  test.sh
(+780 files in other folders)
