[workspace]
members = [".", "exiftool-tags", "exiftool-tags-core", "exiftool-tags-camera", "exiftool-tags-media", "exiftool-tags-image", "exiftool-tags-document", "exiftool-tags-specialty"]
resolver = "2"

[package]
name = "exiftool-rs"
version = "1.0.8"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "A modern, high-performance Rust reimplementation of ExifTool for reading, writing, and editing metadata in 300+ file formats"
license = "GPL-3.0"
repository = "https://github.com/exiftool-rs/exiftool-rs"
readme = "README.md"
keywords = ["exif", "metadata", "xmp", "iptc", "image"]
categories = ["multimedia::images", "command-line-utilities", "parsing"]

[lib]
name = "exiftool_rs"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "exiftool-rs"
path = "src/main.rs"

[[bench]]
name = "parse_benchmarks"
harness = false

[[bench]]
name = "integration_benchmarks"
harness = false

[dependencies]
# Tag database (separate crate, always optimized)
exiftool-tags = { path = "exiftool-tags" }

# CLI Framework
# Pinned to 4.5.49 to avoid version mismatch with clap_derive on Linux CI
clap = { version = "=4.5.49", features = ["derive", "cargo"] }

# Binary Parsing
nom = "8.0"

# XML Parsing (for XMP metadata)
quick-xml = "0.38"

# JSON Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time Handling
chrono = { version = "0.4", features = ["serde"] }

# String Encoding
encoding_rs = "0.8"

# Memory-mapped I/O
memmap2 = "0.9"

# Concurrency
rayon = "1.11"

# Directory Traversal
walkdir = "2.5"

# Progress Bar (optional but recommended)
indicatif = "0.18"

# Lazy Static Initialization
once_cell = "1.21"

# Atomic File Operations
tempfile = "3.23"

# CRC Calculation for PNG chunks
crc = "3.3"

# CSV Output
csv = "1.4"

# Compression/Decompression (for PDF ICC profiles)
flate2 = "1.1"

[build-dependencies]
# HTTP client for downloading ExifTool source
ureq = { version = "3.1", default-features = false, features = ["native-tls"] }
# Regex for parsing Perl tag definitions
regex = "1.12"
# Error handling
anyhow = "1.0"

[dev-dependencies]
# Testing
proptest = "1.9"
criterion = "0.7"
cc = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.dev]
opt-level = 0
# Increase codegen-units to reduce per-unit memory usage
# Default is 256, but we use 16 for better compile times while still reducing memory
codegen-units = 16

# Force optimization for the tag database crate to prevent OOM in debug builds
[profile.dev.package.exiftool-tags]
opt-level = 2
codegen-units = 16

# Force optimization for ALL tag crates to prevent OOM
[profile.dev.package.exiftool-tags-core]
opt-level = 2
codegen-units = 16

[profile.dev.package.exiftool-tags-camera]
opt-level = 2
codegen-units = 16

[profile.dev.package.exiftool-tags-media]
opt-level = 2
codegen-units = 16

[profile.dev.package.exiftool-tags-image]
opt-level = 2
codegen-units = 16

[profile.dev.package.exiftool-tags-document]
opt-level = 2
codegen-units = 16

[profile.dev.package.exiftool-tags-specialty]
opt-level = 2
codegen-units = 16

[profile.test]
opt-level = 2
codegen-units = 4

# Dedicated benchmark profile with aggressive optimizations
# Uses thin LTO for better performance measurement without excessive compile times
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false

[features]
exiftool-comparison = []

# Debian Package Configuration (cargo-deb)
# Install cargo-deb: cargo install cargo-deb
# Build: cargo deb
[package.metadata.deb]
maintainer = "ExifTool-RS Contributors <exiftool-rs@example.com>"
copyright = "2025, ExifTool-RS Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
A modern, high-performance Rust reimplementation of ExifTool for reading, \
writing, and editing metadata in over 300 file formats including JPEG, PNG, \
TIFF, RAW, PDF, and many others. Provides both a command-line interface and \
library for metadata extraction and manipulation."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/exiftool-rs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/exiftool-rs/", "644"],
    ["LICENSE", "usr/share/doc/exiftool-rs/", "644"],
]

# RPM Package Configuration (cargo-generate-rpm)
# Install cargo-generate-rpm: cargo install cargo-generate-rpm
# Build: cargo build --release && cargo generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/exiftool-rs", dest = "/usr/bin/exiftool-rs", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/exiftool-rs/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/exiftool-rs/LICENSE", mode = "644" },
]
[package.metadata.generate-rpm.requires]
# No runtime dependencies - statically linked binary
