# Workspace configuration
[workspace]
members = [
    ".",
    "oxidex-tags",
    "oxidex-tags-core",
    "oxidex-tags-camera",
    "oxidex-tags-media",
    "oxidex-tags-image",
    "oxidex-tags-document",
    "oxidex-tags-specialty",
    "oxidex-tags-shared",
]
resolver = "2"

[package]
name = "oxidex"
version = "1.2.1"
edition = "2024"
authors = ["OxiDex Contributors"]
description = "A modern, high-performance Rust implementation of ExifTool for reading, writing, and editing metadata in 300+ file formats with comprehensive code quality tracking"
license = "GPL-3.0"
repository = "https://github.com/swack-tools/oxidex"
homepage = "https://github.com/swack-tools/oxidex"
documentation = "https://github.com/swack-tools/oxidex"
readme = "README.md"
keywords = ["exif", "metadata", "xmp", "exiftool", "image"]
categories = ["multimedia::images", "multimedia::video", "command-line-utilities", "parsing"]

[lib]
name = "oxidex"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "oxidex"
path = "src/main.rs"

[[bin]]
name = "tag-comparison"
path = "src/bin/tag-comparison/main.rs"
required-features = ["tag-comparison-binary"]

[[bin]]
name = "jpeg-tag-matrix"
path = "src/bin/jpeg-tag-matrix/main.rs"
required-features = ["jpeg-tag-matrix-binary"]

[[bench]]
name = "parse_benchmarks"
harness = false

[[bench]]
name = "integration_benchmarks"
harness = false

[[bench]]
name = "raw_parsing_bench"
harness = false

[dependencies]
# Tag database (separate crate, always optimized)
oxidex-tags = { path = "oxidex-tags" }

# CLI Framework - lightweight, zero-dependency argument parser
lexopt = "0.3"

# Binary Parsing
nom = "8.0"

# XML Parsing (for XMP metadata)
quick-xml = { version = "0.41", features = ["serialize"] }

# JSON Output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time Handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic Hashing
md5 = "0.8"
sha1 = "0.11"
sha2 = "0.11"

# Base64 Encoding/Decoding
base64 = "0.22"

# Hex Encoding
hex = "0.4"

# String Encoding
encoding_rs = "0.8"

# Memory-mapped I/O
memmap2 = "0.9"

# Concurrency
rayon = "1.12"

# Directory Traversal
walkdir = "2.5"

# Progress Bar (optional but recommended)
indicatif = "0.18"

# Lazy Static Initialization
once_cell = "1.21"

# Atomic File Operations
tempfile = "3.27"

# CRC Calculation for PNG chunks
crc = "3.4"

# CSV Output
csv = "1.4"

# Compression/Decompression (for PDF ICC profiles)
flate2 = "1.1"

# ZIP Archive Support (for Office and document formats)
zip = "8.6"

# Async Runtime (for tag-comparison binary)
tokio = { version = "1.53", features = ["full"] }

# CLI Argument Parsing (for tag-comparison binary)
clap = { version = "4.6", features = ["derive"] }

# Regular expressions (for jpeg-tag-matrix binary and build scripts)
regex = "1.13"

# Error handling
anyhow = "1.0"

[build-dependencies]
# HTTP client for downloading ExifTool source
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
# Regex for parsing Perl tag definitions
regex = "1.13"
# Error handling
anyhow = "1.0"

[dev-dependencies]
# Testing
proptest = "1.11"
criterion = "0.8"
cc = "1.3"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.dev]
opt-level = 0
# Increase codegen-units to reduce per-unit memory usage
# Default is 256, but we use 16 for better compile times while still reducing memory
codegen-units = 16

# Force optimization for the tag database crate to prevent OOM in debug builds
[profile.dev.package.oxidex-tags]
opt-level = 2
codegen-units = 16

# Force optimization for ALL tag crates to prevent OOM
[profile.dev.package.oxidex-tags-core]
opt-level = 2
codegen-units = 16

[profile.dev.package.oxidex-tags-camera]
opt-level = 2
codegen-units = 16

[profile.dev.package.oxidex-tags-media]
opt-level = 2
codegen-units = 16

[profile.dev.package.oxidex-tags-image]
opt-level = 2
codegen-units = 16

[profile.dev.package.oxidex-tags-document]
opt-level = 2
codegen-units = 16

[profile.dev.package.oxidex-tags-specialty]
opt-level = 2
codegen-units = 16

[profile.test]
opt-level = 2
codegen-units = 4

# Dedicated benchmark profile with aggressive optimizations
# Uses thin LTO for better performance measurement without excessive compile times
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
debug = true  # Enable debug symbols for profiling

[features]
exiftool-comparison = []
# Feature to enable the tag-comparison binary (used by deploy-docs workflow)
# This binary has special linking requirements and is excluded from default builds
tag-comparison-binary = []
# Feature to enable the jpeg-tag-matrix binary (JPEG tag comparison pipeline)
jpeg-tag-matrix-binary = []

# Debian Package Configuration (cargo-deb)
# Install cargo-deb: cargo install cargo-deb
# Build: cargo deb
[package.metadata.deb]
maintainer = "OxiDex Contributors <oxidex@example.com>"
copyright = "2025, OxiDex Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
A modern, high-performance Rust implementation of ExifTool for reading, \
writing, and editing metadata in over 300 file formats including JPEG, PNG, \
TIFF, RAW, PDF, and many others. Provides both a command-line interface and \
library for metadata extraction and manipulation."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/oxidex", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/oxidex/", "644"],
    ["LICENSE", "usr/share/doc/oxidex/", "644"],
]

# RPM Package Configuration (cargo-generate-rpm)
# Install cargo-generate-rpm: cargo install cargo-generate-rpm
# Build: cargo build --release && cargo generate-rpm
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/oxidex", dest = "/usr/bin/oxidex", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/oxidex/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/oxidex/LICENSE", mode = "644" },
]
[package.metadata.generate-rpm.requires]
# No runtime dependencies - statically linked binary
