[package]
name = "exiftool-tags-camera"
version = "1.0.4"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Camera manufacturer metadata tags for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags_camera"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
exiftool-tags-core = { path = "../exiftool-tags-core" }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
