[package]
name = "exiftool-tags-core"
version = "1.0.2"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Core metadata tags (EXIF, XMP, IPTC, GPS) for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags_core"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
# Will share build dependencies with root
