[package]
name = "exiftool-tags-core"
version = "1.0.3"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Core metadata tags (EXIF, XMP, IPTC, GPS) for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags_core"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
bincode = "1.3"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
