[package]
name = "exiftool-tags-document"
version = "1.0.0"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Document format metadata tags for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags_document"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
exiftool-tags-core = { path = "../exiftool-tags-core" }
