[package]
name = "exiftool-tags-media"
version = "1.0.3"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Audio/video format metadata tags for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags_media"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
exiftool-tags-core = { path = "../exiftool-tags-core" }
