[package]
name = "exiftool-tags"
version = "1.0.2"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Facade crate re-exporting all tag databases for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags"
path = "src/lib.rs"

[dependencies]
exiftool-tags-core = { path = "../exiftool-tags-core" }
exiftool-tags-camera = { path = "../exiftool-tags-camera" }
exiftool-tags-media = { path = "../exiftool-tags-media" }
exiftool-tags-image = { path = "../exiftool-tags-image" }
exiftool-tags-document = { path = "../exiftool-tags-document" }
exiftool-tags-specialty = { path = "../exiftool-tags-specialty" }

# Re-export common dependencies
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
