[package]
name = "oxidex-mcp"
version = "0.1.0"
edition = "2021"
authors = ["OxiDex Contributors"]
description = "MCP server for OxiDex metadata operations"
license = "GPL-3.0"

[[bin]]
name = "oxidex-mcp"
path = "src/main.rs"

[dependencies]
# OxiDex library
oxidex = { path = ".." }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON-RPC / MCP protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Glob pattern matching
glob = "0.3"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
