[package]
name = "oxidex-tags-core"
version = "1.0.4"
edition = "2021"
authors = ["OxiDex Contributors"]
description = "Core tag definitions for OxiDex metadata extraction"
license = "GPL-3.0"

[lib]
name = "oxidex_tags_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
