[package]
name = "oxidex-tags-core"
version = "1.0.4"
edition = "2024"
authors = ["OxiDex Contributors"]
description = "Core tag definitions for OxiDex metadata extraction"
license = "GPL-3.0"

[lib]
name = "oxidex_tags_core"
path = "src/lib.rs"

[dependencies]
oxidex-tags-shared = { path = "../oxidex-tags-shared" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_yaml = "0.9"
oxidex-tags-shared = { path = "../oxidex-tags-shared" }
