[package]
name = "exiftool-tags-document"
version = "1.0.4"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Document format metadata tags for exiftool-rs"
license = "GPL-3.0"

[lib]
name = "exiftool_tags_document"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
exiftool-tags-core = { path = "../exiftool-tags-core" }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
