[package]
name = "oxidex-tags-document"
version = "1.0.4"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Document format tag definitions for OxiDex"
license = "GPL-3.0"

[lib]
name = "oxidex_tags_document"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
oxidex-tags-core = { path = "../oxidex-tags-core" }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
