[package]
name = "oxidex-tags-document"
version = "1.0.4"
edition = "2021"
authors = ["OxiDex Contributors"]
description = "Document format tag definitions for OxiDex"
license = "GPL-3.0"

[lib]
name = "oxidex_tags_document"
path = "src/lib.rs"

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
oxidex-tags-core = { path = "../oxidex-tags-core" }
oxidex-tags-shared = { path = "../oxidex-tags-shared" }

[build-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_yaml = "0.9"
oxidex-tags-shared = { path = "../oxidex-tags-shared" }
