[package]
name = "oxidex-tags"
version = "1.0.4"
edition = "2021"
authors = ["ExifTool-RS Contributors"]
description = "Tag database for OxiDex metadata extraction library"
license = "GPL-3.0"

[lib]
name = "exiftool_tags"
path = "src/lib.rs"

[dependencies]
oxidex-tags-core = { path = "../oxidex-tags-core" }
oxidex-tags-camera = { path = "../oxidex-tags-camera" }
oxidex-tags-media = { path = "../oxidex-tags-media" }
oxidex-tags-image = { path = "../oxidex-tags-image" }
oxidex-tags-document = { path = "../oxidex-tags-document" }
oxidex-tags-specialty = { path = "../oxidex-tags-specialty" }

# Re-export common dependencies
serde = { version = "1.0", features = ["derive"] }
